--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/apriendeau/gafbot/issues"
   },
-  "homepage": "https://github.com/apriendeau/gafbot#readme"
+  "homepage": "https://github.com/apriendeau/gafbot#readme",
+  "dependencies": {
+    "@slack/client": "^3.16.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "request": "^2.83.0",
+    "url-regex": "^4.1.1"
+  }
 }
